--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "circom2": "^0.2.22",
     "circomlib": "^2.0.5",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -90,6 +91,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/bull": "^4.10.0",
     "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
